--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "website-new",
+  "name": "Conference Buddy website",
   "version": "1.0.0",
   "private": true,
   "description": "website-new",
@@ -8,7 +8,7 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop",
+    "dev": "gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
@@ -16,7 +16,18 @@
   },
   "dependencies": {
     "gatsby": "^4.3.0",
+    "gatsby-plugin-image": "^2.3.0",
+    "gatsby-plugin-sharp": "^4.3.0",
+    "gatsby-source-filesystem": "^4.3.0",
+    "gatsby-transformer-sharp": "^4.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "bootstrap": "^4.6.1",
+    "gatsby-plugin-sass": "^5.3.0",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.3.1",
+    "react-scroll-up": "^1.3.7"
   }
 }
