--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Conference Buddy website",
   "version": "1.0.0",
   "private": true,
-  "description": "website-new",
+  "description": "Conference Buddy website",
   "author": "Mirjam Aulbach",
   "keywords": [
     "gatsby"
@@ -26,7 +26,6 @@
   "devDependencies": {
     "bootstrap": "^4.6.1",
     "gatsby-plugin-sass": "^5.3.0",
-    "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-scroll-up": "^1.3.7"
   }
