--- a/package.json
+++ b/package.json
@@ -12,20 +12,30 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "test": "jest",
+    "tdd": "jest --watch"
   },
   "dependencies": {
     "gatsby": "^4.3.0",
     "gatsby-plugin-image": "^2.3.0",
+    "gatsby-plugin-react-helmet": "^5.3.0",
     "gatsby-plugin-sharp": "^4.3.0",
     "gatsby-source-filesystem": "^4.3.0",
     "gatsby-transformer-sharp": "^4.3.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "babel-jest": "^27.4.4",
+    "babel-preset-gatsby": "^2.3.0",
     "bootstrap": "^4.6.1",
     "gatsby-plugin-sass": "^5.3.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.4.4",
     "react-icons": "^4.3.1",
     "react-scroll-up": "^1.3.7"
   }
