--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "Conference Buddy website",
   "version": "1.0.0",
-  "private": true,
   "description": "Conference Buddy website",
   "author": "Mirjam Aulbach",
   "keywords": [
@@ -17,12 +16,12 @@
     "tdd": "jest --watch"
   },
   "dependencies": {
-    "gatsby": "^4.3.0",
-    "gatsby-plugin-image": "^2.3.0",
-    "gatsby-plugin-react-helmet": "^5.3.0",
-    "gatsby-plugin-sharp": "^4.3.0",
-    "gatsby-source-filesystem": "^4.3.0",
-    "gatsby-transformer-sharp": "^4.3.0",
+    "gatsby": "4.25.4",
+    "gatsby-plugin-image": "2.25.0",
+    "gatsby-plugin-react-helmet": "5.25.0",
+    "gatsby-plugin-sharp": "4.25.0",
+    "gatsby-source-filesystem": "4.25.0",
+    "gatsby-transformer-sharp": "4.25.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
@@ -33,7 +32,7 @@
     "babel-jest": "^27.4.4",
     "babel-preset-gatsby": "^2.3.0",
     "bootstrap": "^4.6.1",
-    "gatsby-plugin-sass": "^5.3.0",
+    "gatsby-plugin-sass": "5.25.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.4",
     "react-icons": "^4.3.1",
